<resources>
    <string name="app_name">InitiumSolutionsAssignment</string>
    <string name="you_can_book_an_appointment_to_any_of_the_following_entities">You can book an appointment to any of the following entities</string>
    <string name="select_entity_to_continue">Select entity to continue</string>
    <string name="don_t_have_an_account_yet">Don’t have an account yet?</string>
    <string name="register_now">Register now</string>
    <string name="login_to_your_account">Login to your account</string>
    <string name="menu">menu</string>
    <string name="customer_service">customer service</string>
    <string name="email_address">Email Address</string>
    <string name="password">Password</string>
    <string name="i_would_like_to_save_my_login_credentials_to_this_device">I would like to save my login credentials to this device</string>
    <string name="did_you_forget_your_password"><u>Did you forget your password?</u></string>
    <string name="login">Login</string>
    <string name="contact_information">Contact \n Information</string>
    <string name="first_name">First Name</string>
    <string name="last_name">Last Name</string>
    <string name="mobile_number">Mobile Number</string>
    <string name="access_information">Access\nInformation</string>
    <string name="civil_id">Civil ID</string>
    <string name="retype_password">Retype Password</string>
    <string name="complete_registrations">Complete Registrations</string>
    <string name="new_account_registration">New Account Registration</string>
    <string name="main_screen">Main Screen</string>
    <string name="login_to_my_account">Login to my account</string>
    <string name="register">Register</string>
    <string name="log_out">Log Out</string>
    <string name="no_entities_to_show">No entities to show</string>
</resources>