<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".login.LogInFragment">

    <View
        android:id="@+id/background"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:layout_marginStart="@dimen/medium"
        android:layout_marginEnd="@dimen/medium"
        android:background="@drawable/white_rounded_background"
        app:layout_constraintBottom_toBottomOf="@id/tv_register"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="@id/guideline" />

    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/guideline"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintGuide_percent="0.15"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toStartOf="parent" />

    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/guideline2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        app:layout_constraintGuide_percent="0.25" />

    <TextView
        android:id="@+id/tv_login_to_your_account"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_margin="@dimen/big"
        android:text="@string/login_to_your_account"
        android:textColor="@color/dark_grey"
        android:textSize="24sp"
        android:textStyle="bold"
        app:layout_constraintBottom_toTopOf="@id/et_first_name"
        app:layout_constraintEnd_toEndOf="@id/background"
        app:layout_constraintStart_toStartOf="@id/background"
        app:layout_constraintTop_toTopOf="@id/background" />

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/et_first_name"
        android:layout_width="0dp"
        android:layout_height="60dp"
        android:layout_marginStart="@dimen/big"
        android:layout_marginEnd="@dimen/big"
        android:hint="@string/email_address"
        app:boxBackgroundColor="@color/grey"
        app:boxBackgroundMode="outline"
        app:boxCornerRadiusBottomEnd="@dimen/medium"
        app:boxCornerRadiusBottomStart="@dimen/medium"
        app:boxCornerRadiusTopEnd="@dimen/medium"
        app:boxCornerRadiusTopStart="@dimen/medium"
        app:layout_constraintBottom_toTopOf="@id/et_last_name"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/tv_login_to_your_account">

        <com.google.android.material.textfield.TextInputEditText
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:gravity="center"
            android:textSize="20sp" />
    </com.google.android.material.textfield.TextInputLayout>

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/et_last_name"
        android:layout_width="0dp"
        android:layout_height="60dp"
        android:layout_marginStart="@dimen/big"
        android:layout_marginTop="@dimen/small"
        android:layout_marginEnd="@dimen/big"
        android:hint="@string/password"
        app:boxBackgroundColor="@color/grey"
        app:boxBackgroundMode="outline"
        app:boxCornerRadiusBottomEnd="@dimen/medium"
        app:boxCornerRadiusBottomStart="@dimen/medium"
        app:boxCornerRadiusTopEnd="@dimen/medium"
        app:boxCornerRadiusTopStart="@dimen/medium"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/et_first_name">

        <com.google.android.material.textfield.TextInputEditText
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:gravity="center"
            android:textSize="20sp" />
    </com.google.android.material.textfield.TextInputLayout>

    <com.google.android.material.switchmaterial.SwitchMaterial
        android:id="@+id/switch_credentials_saving"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/medium"
        app:layout_constraintStart_toStartOf="@id/et_last_name"
        app:layout_constraintTop_toBottomOf="@id/et_last_name" />

    <TextView
        android:id="@+id/tv_credential_saving"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="@dimen/big"
        android:layout_marginEnd="@dimen/big"
        android:text="@string/i_would_like_to_save_my_login_credentials_to_this_device"
        android:textColor="@color/dark_grey"
        android:textStyle="bold"
        app:layout_constraintBottom_toBottomOf="@id/switch_credentials_saving"
        app:layout_constraintEnd_toEndOf="@id/et_last_name"
        app:layout_constraintStart_toEndOf="@id/switch_credentials_saving"
        app:layout_constraintTop_toTopOf="@id/switch_credentials_saving" />

    <TextView
        android:id="@+id/tv_forgot_password"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/big"
        android:text="@string/did_you_forget_your_password"
        android:textAlignment="center"
        android:textColor="@color/colorAccent"
        android:textSize="18sp"
        app:layout_constraintEnd_toEndOf="@id/et_last_name"
        app:layout_constraintStart_toStartOf="@id/et_last_name"
        app:layout_constraintTop_toBottomOf="@id/switch_credentials_saving" />

    <com.google.android.material.button.MaterialButton
        android:id="@+id/btn_login"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/small"
        android:text="@string/login"
        android:backgroundTint="@color/colorPrimary"
        app:layout_constraintEnd_toEndOf="@id/et_last_name"
        app:layout_constraintStart_toStartOf="@id/et_last_name"
        app:layout_constraintTop_toBottomOf="@id/tv_forgot_password" />

    <TextView
        android:id="@+id/tv_dont_have_account"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_margin="@dimen/small"
        android:text="@string/don_t_have_an_account_yet"
        android:textAlignment="center"
        android:textColor="@color/dark_grey"
        android:textSize="16sp"
        app:layout_constraintEnd_toEndOf="@id/et_last_name"
        app:layout_constraintStart_toStartOf="@id/et_last_name"
        app:layout_constraintTop_toBottomOf="@id/btn_login" />

    <TextView
        android:id="@+id/tv_register"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="@dimen/medium"
        android:elevation="100dp"
        android:paddingBottom="@dimen/medium"
        android:text="@string/register_now"
        android:textAlignment="center"
        android:textColor="@color/colorAccent"
        android:textSize="16sp"
        android:textStyle="bold"
        app:layout_constraintEnd_toEndOf="@id/et_last_name"
        app:layout_constraintStart_toStartOf="@id/et_last_name"
        app:layout_constraintTop_toBottomOf="@id/tv_dont_have_account" />

</androidx.constraintlayout.widget.ConstraintLayout>