<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".register.RegisterFragment">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <View
            android:id="@+id/background"
            android:layout_width="0dp"
            android:layout_height="0dp"
            android:layout_marginStart="@dimen/medium"
            android:layout_marginEnd="@dimen/medium"
            android:layout_marginBottom="10dp"
            android:background="@drawable/white_rounded_background"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="@id/guideline" />

        <androidx.constraintlayout.widget.Guideline
            android:id="@+id/guideline"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            app:layout_constraintGuide_percent="0.12" />

        <androidx.constraintlayout.widget.Guideline
            android:id="@+id/guideline2"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            app:layout_constraintGuide_percent="0.25" />

        <TextView
            android:id="@+id/tv_login_to_your_account"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/medium"
            android:layout_marginBottom="@dimen/small"
            android:text="@string/new_account_registration"
            android:textColor="@color/dark_grey"
            android:textSize="24sp"
            android:textStyle="bold"
            app:layout_constraintBottom_toTopOf="@id/tv_contact_information"
            app:layout_constraintEnd_toEndOf="@id/background"
            app:layout_constraintStart_toStartOf="@id/background"
            app:layout_constraintTop_toTopOf="@id/background" />

        <TextView
            android:id="@+id/tv_contact_information"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_margin="@dimen/small"
            android:text="@string/contact_information"
            android:textAlignment="center"
            android:textColor="@color/colorPrimary"
            android:textSize="20sp"
            android:textStyle="bold"
            app:layout_constraintBottom_toTopOf="@id/et_first_name"
            app:layout_constraintEnd_toEndOf="@id/tv_login_to_your_account"
            app:layout_constraintStart_toStartOf="@id/tv_login_to_your_account"
            app:layout_constraintTop_toBottomOf="@id/tv_login_to_your_account" />

        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/et_first_name"
            android:layout_width="0dp"
            android:layout_height="60dp"
            android:layout_marginStart="@dimen/big"
            android:layout_marginEnd="@dimen/big"
            android:hint="@string/first_name"
            app:boxBackgroundColor="@color/grey"
            app:boxBackgroundMode="outline"
            app:boxCornerRadiusBottomEnd="@dimen/medium"
            app:boxCornerRadiusBottomStart="@dimen/medium"
            app:boxCornerRadiusTopEnd="@dimen/medium"
            app:boxCornerRadiusTopStart="@dimen/medium"
            app:layout_constraintBottom_toTopOf="@id/et_last_name"
            app:layout_constraintEnd_toEndOf="@id/background"
            app:layout_constraintStart_toStartOf="@id/background"
            app:layout_constraintTop_toBottomOf="@id/tv_contact_information">

            <com.google.android.material.textfield.TextInputEditText
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:gravity="center"
                android:inputType="textPersonName"
                android:textSize="20sp" />
        </com.google.android.material.textfield.TextInputLayout>

        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/et_last_name"
            android:layout_width="0dp"
            android:layout_height="60dp"
            android:layout_marginStart="@dimen/big"
            android:layout_marginTop="@dimen/small"
            android:layout_marginEnd="@dimen/big"
            android:hint="@string/last_name"
            app:boxBackgroundColor="@color/grey"
            app:boxBackgroundMode="outline"
            app:boxCornerRadiusBottomEnd="@dimen/medium"
            app:boxCornerRadiusBottomStart="@dimen/medium"
            app:boxCornerRadiusTopEnd="@dimen/medium"
            app:boxCornerRadiusTopStart="@dimen/medium"
            app:layout_constraintEnd_toEndOf="@id/background"
            app:layout_constraintStart_toStartOf="@id/background"
            app:layout_constraintTop_toBottomOf="@id/et_first_name">

            <com.google.android.material.textfield.TextInputEditText
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:gravity="center"
                android:inputType="textPersonName"
                android:textSize="20sp" />
        </com.google.android.material.textfield.TextInputLayout>

        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/et_mobile_number"
            android:layout_width="0dp"
            android:layout_height="60dp"
            android:layout_marginStart="@dimen/big"
            android:layout_marginTop="@dimen/small"
            android:layout_marginEnd="@dimen/big"
            android:hint="@string/mobile_number"
            app:boxBackgroundColor="@color/grey"
            app:boxBackgroundMode="outline"
            app:boxCornerRadiusBottomEnd="@dimen/medium"
            app:boxCornerRadiusBottomStart="@dimen/medium"
            app:boxCornerRadiusTopEnd="@dimen/medium"
            app:boxCornerRadiusTopStart="@dimen/medium"
            app:layout_constraintEnd_toEndOf="@id/background"
            app:layout_constraintStart_toStartOf="@id/background"
            app:layout_constraintTop_toBottomOf="@id/et_last_name">

            <com.google.android.material.textfield.TextInputEditText
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:gravity="center"
                android:inputType="number"
                android:textSize="20sp" />
        </com.google.android.material.textfield.TextInputLayout>

        <TextView
            android:id="@+id/tv_access_information"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_margin="@dimen/small"
            android:text="@string/access_information"
            android:textAlignment="center"
            android:textColor="@color/colorPrimary"
            android:textSize="20sp"
            android:textStyle="bold"
            app:layout_constraintBottom_toTopOf="@id/et_civil_id"
            app:layout_constraintEnd_toEndOf="@id/tv_login_to_your_account"
            app:layout_constraintStart_toStartOf="@id/tv_login_to_your_account"
            app:layout_constraintTop_toBottomOf="@id/et_mobile_number" />


        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/et_civil_id"
            android:layout_width="0dp"
            android:layout_height="60dp"
            android:layout_marginStart="@dimen/big"
            android:layout_marginTop="@dimen/small"
            android:layout_marginEnd="@dimen/big"
            android:hint="@string/civil_id"
            app:boxBackgroundColor="@color/grey"
            app:boxBackgroundMode="outline"
            app:boxCornerRadiusBottomEnd="@dimen/medium"
            app:boxCornerRadiusBottomStart="@dimen/medium"
            app:boxCornerRadiusTopEnd="@dimen/medium"
            app:boxCornerRadiusTopStart="@dimen/medium"
            app:layout_constraintEnd_toEndOf="@id/background"
            app:layout_constraintStart_toStartOf="@id/background"
            app:layout_constraintTop_toBottomOf="@id/tv_access_information">

            <com.google.android.material.textfield.TextInputEditText
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:gravity="center"
                android:inputType="number"
                android:textSize="20sp" />
        </com.google.android.material.textfield.TextInputLayout>

        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/et_email_address"
            android:layout_width="0dp"
            android:layout_height="60dp"
            android:layout_marginStart="@dimen/big"
            android:layout_marginTop="@dimen/small"
            android:layout_marginEnd="@dimen/big"
            android:layout_marginBottom="@dimen/big"
            android:hint="@string/email_address"
            app:boxBackgroundColor="@color/grey"
            app:boxBackgroundMode="outline"
            app:boxCornerRadiusBottomEnd="@dimen/medium"
            app:boxCornerRadiusBottomStart="@dimen/medium"
            app:boxCornerRadiusTopEnd="@dimen/medium"
            app:boxCornerRadiusTopStart="@dimen/medium"
            app:layout_constraintBottom_toTopOf="@id/et_password"
            app:layout_constraintEnd_toEndOf="@id/background"
            app:layout_constraintStart_toStartOf="@id/background"
            app:layout_constraintTop_toBottomOf="@id/et_civil_id">

            <com.google.android.material.textfield.TextInputEditText
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:gravity="center"
                android:inputType="textEmailAddress"
                android:textSize="20sp" />
        </com.google.android.material.textfield.TextInputLayout>

        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/et_password"
            android:layout_width="0dp"
            android:layout_height="60dp"
            android:layout_marginStart="@dimen/big"
            android:layout_marginTop="@dimen/small"
            android:layout_marginEnd="@dimen/big"
            android:hint="@string/password"
            app:boxBackgroundColor="@color/grey"
            app:boxBackgroundMode="outline"
            app:boxCornerRadiusBottomEnd="@dimen/medium"
            app:boxCornerRadiusBottomStart="@dimen/medium"
            app:boxCornerRadiusTopEnd="@dimen/medium"
            app:boxCornerRadiusTopStart="@dimen/medium"
            app:layout_constraintBottom_toTopOf="@id/et_retype_password"
            app:layout_constraintEnd_toEndOf="@id/background"
            app:layout_constraintStart_toStartOf="@id/background"
            app:layout_constraintTop_toBottomOf="@id/et_email_address">

            <com.google.android.material.textfield.TextInputEditText
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:gravity="center"
                android:inputType="textPassword"
                android:textSize="20sp" />
        </com.google.android.material.textfield.TextInputLayout>

        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/et_retype_password"
            android:layout_width="0dp"
            android:layout_height="60dp"
            android:layout_marginStart="@dimen/big"
            android:layout_marginTop="@dimen/small"
            android:layout_marginEnd="@dimen/big"
            android:hint="@string/retype_password"
            app:boxBackgroundColor="@color/grey"
            app:boxBackgroundMode="outline"
            app:boxCornerRadiusBottomEnd="@dimen/medium"
            app:boxCornerRadiusBottomStart="@dimen/medium"
            app:boxCornerRadiusTopEnd="@dimen/medium"
            app:boxCornerRadiusTopStart="@dimen/medium"
            app:layout_constraintEnd_toEndOf="@id/background"
            app:layout_constraintStart_toStartOf="@id/background"
            app:layout_constraintTop_toBottomOf="@id/et_password">

            <com.google.android.material.textfield.TextInputEditText
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:gravity="center"
                android:inputType="textPassword"
                android:textSize="20sp" />
        </com.google.android.material.textfield.TextInputLayout>

        <com.google.android.material.checkbox.MaterialCheckBox
            android:id="@+id/chk_terms_conditions"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/medium"
            app:layout_constraintBottom_toTopOf="@id/btn_complete_registration"
            app:layout_constraintEnd_toEndOf="@id/et_retype_password"
            app:layout_constraintHorizontal_bias="0"
            app:layout_constraintStart_toStartOf="@id/et_retype_password"
            app:layout_constraintTop_toBottomOf="@id/et_retype_password" />

        <TextView
            android:id="@+id/tv_terms_conditions"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            app:layout_constraintBottom_toBottomOf="@id/chk_terms_conditions"
            app:layout_constraintStart_toEndOf="@id/chk_terms_conditions"
            app:layout_constraintTop_toTopOf="@id/chk_terms_conditions" />

        <com.google.android.material.button.MaterialButton
            android:id="@+id/btn_complete_registration"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginStart="@dimen/medium"
            android:layout_marginEnd="@dimen/medium"
            android:layout_marginBottom="@dimen/big"
            android:backgroundTint="@color/colorPrimary"
            android:text="@string/complete_registrations"
            app:layout_constraintBottom_toBottomOf="@id/background"
            app:layout_constraintEnd_toEndOf="@id/background"
            app:layout_constraintStart_toStartOf="@id/background"
            app:layout_constraintTop_toBottomOf="@id/chk_terms_conditions" />

        <androidx.constraintlayout.widget.Guideline
            android:id="@+id/guideline3"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            app:layout_constraintGuide_begin="945dp" />

    </androidx.constraintlayout.widget.ConstraintLayout>
</ScrollView>